syntax = "proto3";

package tasks;

option go_package = "github.com/ydb-platform/nbs/cloud/tasks/acceptance_tests/recipe/tasks/protos";

////////////////////////////////////////////////////////////////////////////////

message ChainTaskRequest {
    uint32 Depth = 1;
}

message ChainTaskState {
    ChainTaskRequest Request = 1;
    // Imitates some user defined state.
    uint32 Counter = 2;
}
